--- a/frontend-angular/package.json
+++ b/frontend-angular/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.12",
-    "@angular/cli": "^17.3.12",
+    "@angular/cli": "^19.2.0-rc.0",
     "@angular/compiler-cli": "^17.3.0",
     "@angular/localize": "^17.3.0",
     "@types/express": "^4.17.17",
