--- a/frontend-angular/package.json
+++ b/frontend-angular/package.json
@@ -25,8 +25,10 @@
     "@angular/ssr": "^17.3.12",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
+    "@primeng/themes": "^19.0.9",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "primeng": "^17.18.15",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
