--- a/frontend-angular/package.json
+++ b/frontend-angular/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:frontend-angular": "node dist/frontend-angular/server/server.mjs"
