--- a/apps/frontend-angular/package.json
+++ b/apps/frontend-angular/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "primeng": "^17.18.15",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
