--- a/apps/frontend-angular/package.json
+++ b/apps/frontend-angular/package.json
@@ -27,6 +27,7 @@
     "@popperjs/core": "^2.11.8",
     "@primeng/themes": "^19.0.9",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.9",
     "express": "^4.18.2",
     "primeng": "^17.18.15",
     "quill": "^2.0.3",
