--- a/apps/frontend-angular/package.json
+++ b/apps/frontend-angular/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.9",
     "express": "^4.18.2",
+    "primeicons": "^7.0.0",
     "primeng": "^17.18.15",
     "quill": "^2.0.3",
     "rxjs": "~7.8.0",
