--- a/apps/frontend-angular/angular.json
+++ b/apps/frontend-angular/angular.json
@@ -56,12 +56,12 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "2mb"
+                  "maximumError": "2.5mb"
                 },
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kb",
-                  "maximumError": "2mb"
+                  "maximumError": "6kb"
                 }
               ],
               "outputHashing": "all"
